Fix: Site icon gets distorted with long story title

--- a/extensions/blocks/story/player/style.scss
+++ b/extensions/blocks/story/player/style.scss
@@ -444,6 +444,7 @@
 				background-color: #fff;
 				width: 40px;
 				height: 40px;
+				flex-shrink: 0;
 				margin: 0 16px 0 0;
 				border: 2px solid #fff;
 				border-radius: 4px;
